# fetchvalue

./: Cargo.toml  README.md
examples/: catfacts.rs
src/: lib.rs
