[package]
name = "fetchvalue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ehttp = "0.2.0"
poll-promise = "0.1.0"
serde = { version = "1", features = ["derive"] } 
serde_json = "1.0.86"
tracing = { version = "0.1", default-features = false, features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

# [target.wasm32-unknown-unknown.dependencies]
# web-sys = "0.3.60"
